--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
+  "name": "projeto-s6-relacionamentos",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --ignore-watch node_modules --cls --rs src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs",
     "test": "jest --verbose --runInBand"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
+    "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.10"
+    "typeorm": "0.3.11",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.8",
-    "@types/jsonwebtoken": "^9.0.1",
+    "@jest/globals": "^29.4.3",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^16.11.10",
+    "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
-    "jest": "^28.1.3",
+    "jest": "^29.4.3",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.0.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "4.5.2"
   }
 }
